# vshard

./: .gitignore  .gitmodules  .luacheckrc  .tarantoolctl  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  devcfg.lua  go.mod  go.sum  router.lua  storage.lua  vshard-scm-1.rockspec
.github/workflows/: cartridge_integration.yml  catch_flaky.yml  check_tarantool_integration.yml  fast_testing.yml  lint.yml  (+7 more)
bench/: .tarantoolctl  Makefile  client.lua  config.lua  node_template.lua  router.lua
benchmark/: Makefile  bench.cpp  client.lua  client_3.lua  common.lua  router.lua  router_14.lua  storage.lua  storage_2_1.lua  storage_3_1.lua
changelogs/: 0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md
cmake/: FindTarantool.cmake
debian/: .gitignore  changelog  control  copyright  prebuild.sh  rules
example/: Makefile  generate_load.lua  localcfg.lua  router.lua  router_1.lua  storage.lua  vshard
go-vshard-router/: README.md  README_ru.md  api.go  discovery.go  error.go  providers.go  vshard.go  vshard_test.go
router-c/: Makefile  router.lua
rpm/: prebuild.sh  tarantool-vshard.spec
test/: .tarantoolctl  CMakeLists.txt  requirements.txt  test-run.py
vshard/: CMakeLists.txt  cfg.lua  codes.lua  consts.lua  error.lua  hash.lua  heap.lua  init.lua  log_ratelimit.lua  lua_gc.lua  registry.lua  replicaset.lua  rlist.lua  service_info.lua  util.lua  version.lua
vshard/router/: CMakeLists.txt  init.lua
vshard/storage/: CMakeLists.txt  export_log.lua  exports.lua  init.lua  ref.lua  reload_evolution.lua  route_dispenser.lua  sched.lua  schema.lua
(+308 files in other folders)
